Внес изменения по minio
